--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,8 +2,10 @@
 .flex{
     display: flex;
 }
-.container{
+.block-container{
     background-color: rgb(228, 228, 228);
+    margin: 0;
+    padding: 0;
 }
 /* header-footer */
 .top-framework {
@@ -19,7 +21,7 @@
     padding: 32px 0 32px 40px;
 }
 .nav-link{
-    margin: 42px 32px 0 auto;
+    margin: 30px 32px 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -134,4 +136,20 @@
     width: 19%;
     padding: 24px;
     text-align: left;
+}
+.date{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin: 40px auto;
+}
+.attendance-btn{
+    margin: 0 32px;
+    font: blue;
+    border-color: blue;
+    display: inline-block;
+}
+.pagination{
+    justify-content: center;
 }
